# embedded-wasm-blinky-rp2350

./: .gitignore  .pico-rs  Cargo.toml  RE.md  README.md  TUTORIAL.md  build.rs  flash.sh  test.sh
.cargo/: config.toml
src/: led.rs  main.rs  platform.rs  uart.rs
wasm-app/: Cargo.toml
wasm-app/.cargo/: config.toml
wasm-app/src/: lib.rs
wasm-tests/: Cargo.toml  build.rs
wasm-tests/.cargo/: config.toml
wasm-tests/tests/: integration.rs
